--- a/src/App.fsproj
+++ b/src/App.fsproj
@@ -1,9 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="../shared/Types.fs" />
+    <Compile Include="Home.fs" />
+    <Compile Include="Join.fs" />
+    <Compile Include="Play.fs" />
+    <Compile Include="Result.fs" />
     <Compile Include="App.fs" />
   </ItemGroup>
   <Import Project="..\.paket\Paket.Restore.targets" />
