--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "serve": "vite serve"
   },
   "devDependencies": {
+    "rollup-plugin-sourcemaps": "^0.6.3",
     "vite": "^2.4.0"
   },
   "name": "swa-fable-starter",
